# querywise

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: app.rs  main.rs
src/ai/: agent.rs  mod.rs  provider.rs
src/config/: connections.rs  mod.rs
src/db/: bookmarks.rs  connection.rs  explain.rs  history.rs  mod.rs  query_cache.rs  query_plan.rs  schema.rs
src/ui/: mod.rs  renderer.rs  theme.rs
src/ui/components/: mod.rs  sql_highlight.rs
tests/: integration_test.rs
