[package]
name = "querywise"
version = "0.1.0"
edition = "2021"
description = "AI-powered universal database TUI client"
license = "AGPL-3.0"
repository = "https://github.com/rohitgs28/querywise"
keywords = ["database", "tui", "sql", "ai", "cli"]
categories = ["command-line-utilities", "database"]

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database drivers
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "mysql", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for AI APIs)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Misc
tui-textarea = "0.7"
unicode-width = "0.2"
chrono = "0.4"
dirs = "6"
toml = "0.8"
csv = "1"
arboard = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
